# kio-astro-thumbnailer

./: CMakeLists.txt  README.md  astrothumbnail.cpp  astrothumbnail.json
LICENSES/: LGPL-2.0-or-later.txt
